--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1386,5 +1386,29 @@
   "AccountSelector_Spamfilter": {
     "message": "Choose the accounts where the spam filter is enabled",
     "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_project": {
+    "message": "ChatGPT Web project",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_project_info": {
+    "message": "This is the project that will be enforced for the ChatGPT Web Interface.",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_custom_gpt": {
+    "message": "ChatGPT Web custom GPT",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_custom_gpt_info": {
+    "message": "This is the custom GPT that will be enforced for the ChatGPT Web Interface.",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_custom_data_info": {
+    "message": "This must be in the following form:",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_custom_data_info2": {
+    "message": "You can find the correct value in the browser URL field when you open the related ChatGPT page.",
+    "description": ""
   }
 }
