--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1414,5 +1414,9 @@
   "prefs_OptionText_chatgpt_web_custom_data_info2": {
     "message": "You can find the correct value in the browser URL field when you open the related ChatGPT page.",
     "description": ""
+  },
+  "customPrompts_Properties": {
+    "message": "Properties",
+    "description": ""
   }
 }
