--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1418,5 +1418,13 @@
   "customPrompts_Properties": {
     "message": "Properties",
     "description": ""
+  },
+  "customPrompts_show_additional_info": {
+    "message": "Show ChatGPT additional properties",
+    "description": ""
+  },
+  "customPrompts_hide_additional_info": {
+    "message": "Hide ChatGPT additional properties",
+    "description": ""
   }
 }
