Add confirmation dialog for applying OpenAI compatible configurations. see #378

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1518,5 +1518,14 @@
   "Custom": {
     "message": "Custom",
     "description": ""
+  },
+  "OpenAIComp_Configs_ConfirmApply": {
+    "message": "Are you sure you want to apply the configuration \"$config_name$\"?",
+    "description": "",
+    "placeholders": {
+        "config_name": {
+            "content": "$1"
+        }
+    }
   }
 }
