selected_html placeholder added. see #368

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -619,6 +619,10 @@
     "message": "Selected text",
     "description": ""
   },
+  "placeholder_selected_html": {
+    "message": "Selected html",
+    "description": ""
+  },
   "placeholder_additional_text": {
     "message": "Additional text",
     "description": ""
