the user can select a part of the response in the api webchat. fixes #356

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1531,5 +1531,9 @@
             "content": "$1"
         }
     }
+  },
+  "apiwebchat_selection_info": {
+    "message": "If you select some text, only that portion will be considered.",
+    "description": ""
   }
 }
