--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -620,7 +620,7 @@
     "description": ""
   },
   "placeholder_selected_html": {
-    "message": "Selected html",
+    "message": "Selected HTML",
     "description": ""
   },
   "placeholder_additional_text": {
