added the change the reply type button in the chatgpt web interface. see #372

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1555,5 +1555,9 @@
   "prefs_ollama_think_Info": {
     "message": "If checked, the Model will think before answering. This option works only with models that support the 'think' feature.",
     "description": ""
+  },
+  "chatgpt_win_change_reply_type": {
+    "message": "Click to change the reply type",
+    "description": ""
   }
 }
