--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1563,5 +1563,13 @@
   "chatgpt_win_change_reply_type": {
     "message": "Click to change the reply type",
     "description": ""
+  },
+  "prefs_OptionText_add_tags_exclusions_exact_match": {
+    "message": "Exclusions exact match",
+    "description": ""
+  },
+  "prefs_OptionText_add_tags_exclusions_exact_match_Info": {
+    "message": "If checked, the tags in the exclusion list will be matched exactly, otherwise they will be matched partially.",
+    "description": ""
   }
 }
