--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -353,7 +353,7 @@
     "chatgpt_api_request_failed": {
         "message": "Požadavek na OpenAI ChatGPT API selhal"
     },
-    "WaitingServerReponse": {
+    "WaitingServerResponse": {
         "message": "Čekám na odpověď serveru"
     },
     "prefs_API_Host_Info": {
