--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -384,7 +384,7 @@
     "chatgpt_api_request_failed": {
         "message": "Anfrage an die OpenAI ChatGPT API fehlgeschlagen"
     },
-    "WaitingServerReponse": {
+    "WaitingServerResponse": {
         "message": "Warten auf die Serverantwort"
     },
     "prefs_API_Host_Info": {
