--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -384,7 +384,7 @@
     "chatgpt_api_request_failed": {
         "message": "OpenAI ChatGPT API zahtjev nije uspio"
     },
-    "WaitingServerReponse": {
+    "WaitingServerResponse": {
         "message": "Čeka se odgovor poslužitelja"
     },
     "prefs_API_Host_Info": {
