--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -384,7 +384,7 @@
     "chatgpt_api_request_failed": {
         "message": "Zapytanie do API OpenAI ChatGPT nie powiodło się"
     },
-    "WaitingServerReponse": {
+    "WaitingServerResponse": {
         "message": "Oczekiwanie na odpowiedź serwera"
     },
     "prefs_API_Host_Info": {
