Add button and functionality to manage data placeholders in options. see #156

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -315,6 +315,10 @@
     "message": "Manage your prompts",
     "description": ""
   },
+  "prefs_OptionText_btnManageCustomDataPH": {
+    "message": "Manage your data placeholders",
+    "description": ""
+  },
   "prefsInfoTitle": {
     "message": "Important Information",
     "description": ""
